2000-06-01  James Henstridge  <james@daa.com.au>

	* app/interface.c (origin_button_press): changes so the origin
	button doesn't grab the pointer when we pop up the menu.

	* app/commands.c (help_about_callback): fix small memory leak in
	about box code.

	* app/menus.c (menus_init): fixed breakage I introduced in the non
	gnome menus when I was doing the menu changes.  The tearoffs work
	really nicely in plain gtk mode as well.

	* objects/standard/beziergon.c (beziergon_create): changed the
	returned handles to match the handle numbering changes.  Now
	segment addition and removal works correctly with undo!

	* lib/beziershape.c: various changes to the code.  Changed the
	numbering of handles, and fixed the segment removal code.

2000-05-31  James Henstridge  <james@daa.com.au>

	* objects/standard/beziergon.c: remove connection point handling.
	There is still a bit of work to be done to get adding and removing
	of segments working correctly.

	* lib/beziershape.c: add connection point handling to beziershape.
	I set it for two connection points per segment.

2000-05-30  James Henstridge  <james@daa.com.au>

	* objects/standard/polygon.c: don't do connectionpoint handling.

	* lib/polyshape.c: changed to handle connection points internally.
	Also, don't worry about connections to handles on polyshape, as
	all handles are non connectable.

2000-05-30 Ville Hautamaki <villeh@cs.joensuu.fi>

	* configure.in: Added finnish
	
2000-05-30  James Henstridge  <james@daa.com.au>

	* sheets/*.sheet: translation updates to the .sheet files.

	* po/fr.po: updated po file from Christophe Merlet.

	* menus.h: removed prototypes for functions which have been removed.

2000-05-29  James Henstridge  <james@daa.com.au>

	* app/layer_dialog.c (layer_dialog_set_diagram): set the selected
	item in the option menu when changing selected diagram.

	* app/dia_embedd.c (view_factory): fix up function to work with new
	menus API.

	* app/disp_callbacks.c (ddisplay_realize): remove call to